# ROS

./: .gitignore  README.md  franka_robot.sdf  franka_robot.urdf
install/: local_setup.sh  setup.sh
install/franka_description/share/franka_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/franka_description/share/franka_description/cmake/: franka_descriptionConfig-version.cmake  franka_descriptionConfig.cmake
install/franka_description/share/franka_description/environment/: ament_prefix_path.dsv  path.dsv
install/franka_description/share/franka_description/launch/: visualize_franka.launch.py
install/franka_description/share/franka_description/rviz/: visualize_franka.rviz
install/franka_description/share/franka_description/urdfs/: fr3_franka_hand.sdf  fr3_franka_hand.urdf
install/franka_moveit_config/share/franka_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/franka_moveit_config/share/franka_moveit_config/cmake/: franka_moveit_configConfig-version.cmake  franka_moveit_configConfig.cmake
install/franka_moveit_config/share/franka_moveit_config/config/: fr3.ros2_control.xacro  fr3.srdf  fr3.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
install/franka_moveit_config/share/franka_moveit_config/environment/: path.dsv  (+1 more)
install/gazebo_practise/lib/gazebo_practise/: reference_generator
install/gazebo_practise/share/gazebo_practise/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/franka_moveit_config/: .setup_assistant
src/franka_moveit_config/config/: fr3.ros2_control.xacro  fr3.srdf  fr3.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
src/franka_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/gazebo_practise/: CMakeLists.txt  package.xml  plugins.xml
src/gazebo_practise/config/: gz_bridge.yaml  ign_bridge.yaml  my_robot_config.rviz
src/gazebo_practise/controller/: robot_controller.cpp
src/gazebo_practise/controller/include/: robot_controller.hpp
src/gazebo_practise/controller/include/gazebo_practise/: robot_controller.hpp
src/gazebo_practise/controller_config/: controller.yaml
src/gazebo_practise/install/: local_setup.sh  setup.sh
src/gazebo_practise/install/gazebo_practise/share/gazebo_practise/: package.bash  package.zsh
src/gazebo_practise/launch/: empty_world.launch.py  send_trajectory.launch.py
src/gazebo_practise/log/: latest_build
src/gazebo_practise/src/: SDF_Practise.sdf  URDF_Practise.urdf  reference_generator.cpp
src/gazebo_practise/urdf/: URDF_Practise.urdf  URDF_Simple.urdf
src/gazebo_practise/worlds/: world.sdf
(+115 files in other folders)
