<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_practise</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="victorho921@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_sim</depend>  <!-- For Gazebo -->
  <depend>robot_state_publisher</depend>  <!-- For publishing robot state -->
  <depend>rviz2</depend>  <!-- For RViz visualization -->
  <depend>franka_description</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
